--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -49,9 +49,17 @@ header {
     height: 600px;
     background-size: cover ;
     background-position: center;
+    position: relative;
   }
-  section div{
-    text-align: left;
+  .hero-form{
+    color: #024e76;
+    background-color: #fce138;
+    width: 500px;
+    padding: 20px;
+    border: 3px solid #024e76;
+    position: absolute;
+    bottom: 120px;
+    right: 140px;
   }
 
   footer{
