--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -61,6 +61,35 @@ header {
     bottom: 120px;
     right: 140px;
   }
+  .hero-form h3{
+    font-size: 24px;
+    margin: 0;
+  }
+  .hero-form p{
+    margin: 5px 0 15px 0 ;
+  }
+  .form-input {
+    font-size: 16px;
+    border: 1px solid #024e76;
+    display: block;
+    padding: 7px 15px;
+    width: 100%;
+    margin-bottom: 15px;
+  }
+  .hero-form label{
+    margin: 0 5px;
+  }
+
+  .hero-form button{
+    background-color: #024e76;
+    color: #fce138;
+    padding: 10px 20px;
+    border: none;
+    font-size: 16px;
+
+  }
+
+
 
   footer{
     background-color: #fce138;
