--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -88,6 +88,16 @@ header {
     font-size: 16px;
 
   }
+  #what-you-do{
+    background-color: #fce138;
+    text-align: center;
+    color:#024e76;
+    
+  }
+  #what-you-do div img{
+    width: 100px;
+    height: auto;
+  }
 
 
 
