--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -100,6 +100,13 @@ header {
     border-color: #fce138;
     display: inline-block;
   }
+  .intro p {
+    line-height: 1.7;
+    color: #39a6b2;
+    width: 80%;
+    font-size: 20px;
+    display: inline-block;
+  }
   #what-you-do{
     background-color: #fce138;
     text-align: center;
