--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -91,15 +91,22 @@ header {
   .intro{
     text-align: center;
   }
-  .intro h2{
+  .section-title{
     font-size: 55px;
     color: #024e76;
     margin-bottom: 35px;
     padding: 0 100px 20px 100px;
     border-bottom: 3px solid;
-    border-color: #fce138;
     display: inline-block;
   }
+
+  .primary-border{
+    border-color: #fce138;
+  }
+  .secondary-border{
+    border-color: #024e76;
+  }
+  
   .intro p {
     line-height: 1.7;
     color: #39a6b2;
@@ -107,15 +114,34 @@ header {
     font-size: 20px;
     display: inline-block;
   }
-  #what-you-do{
-    background-color: #fce138;
+  .steps{
     text-align: center;
-    color:#024e76;
-    
+    background-color: #fce138;
+    line-height: 1.7;
   }
-  #what-you-do div img{
-    width: 100px;
-    height: auto;
+
+  .steps div{
+    margin-bottom: 80px;
+  }
+
+  .steps img{
+    width: 15%;
+    margin: 10px 0;
+  }
+
+  .steps h3{
+    color: #024e76;
+    font-size: 46px;
+    margin-top: 10px;
+  }
+
+  .steps p{
+    color: #39a6b2;
+    font-size: 23px;
+  }
+
+  .steps span{
+    font-size: 38px;
   }
 
 
