--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -104,7 +104,7 @@ header {
     border-color: #fce138;
   }
   .secondary-border{
-    border-color: #024e76;
+    border-color: #39a6b2;
   }
   
   .intro p {
@@ -198,6 +198,50 @@ header {
 
   .text-right{
     text-align: right;
+  }
+
+  .contact{
+    background-color: #024e76;
+    text-align: center;
+  }
+
+  .contact h2{
+    color: #fce138;
+    border-bottom: #39a6b2 3px solid;
+    font-size: 55px;
+    margin: 0 100px 20px 100px;
+    width: 30%;
+    display: inline-block;
+  }
+
+  .contact-info iframe{
+    width: 400px;
+    height: 400px;
+  }
+
+  .contact-info div{
+    width: 410px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin: 30px 0 0 60px;
+    color: white;
+  }
+
+  .contact-info h3 {
+    color: #fce138;
+    font-size: 32px;
+  }
+  
+  .contact-info p, .contact-info address {
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 20px;
+    font-style: normal;
+  }
+  
+  .contact-info a {
+    color: #fce138;
   }
 
   footer{
