--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -40,13 +40,26 @@ header nav {
     margin: 7px 0;
 }
 
-header nav ul li {
+/* header nav ul li {
     display: inline;
     margin: 0 30px;
     font-weight: lighter;
     font-size: 22px;
+} */
+
+header nav ul{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
 }
 
+header nav ul li a{
+  margin: 0 30px;
+  font-weight: lighter;
+  font-size: 1.55vw;
+}
 
 /* HEADER SECTION ENDS */
 
