--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -72,21 +72,41 @@ section {
 
 .hero-image {
     background-image: url("../images/hero-bg.jpeg");
-    height: 600px;
+    /* height: 600px; */
     background-size: cover;
     background-position: center;
-    position: relative;
+    /* position: relative; */
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
+
+.hero-cta{
+  width: 35%;
+  text-align: right;
+  margin: 3.5%;
+  color: #fff;
+  font-size: 18px;
+  line-height: 1.3;
+}
+
+.hero-cta h2 {
+    font-style: italic;
+    font-size: 55px;
+    color: #fce138;
+  }
 
 .hero-form {
     color: #024e76;
     background-color: #fce138;
-    width: 500px;
+    /* width: 500px; */
+    width: 40%;
+    margin: 3.5%;
     padding: 20px;
     border: 3px solid #024e76;
-    position: absolute;
+    /* position: absolute;
     bottom: 120px;
-    right: 140px;
+    right: 140px; */
 }
 
 .hero-form h3 {
@@ -313,17 +333,21 @@ footer {
     background-color: #fce138;
     width: 100%;
     padding: 40px 35px;
+    display: flex;
+    justify-content:space-between;
+    flex-wrap:wrap;
 }
 
 footer h2 {
-    display: inline;
+    /* display: inline; */
+
     color: #024e76;
     font-size: 30px;
     margin: 0;
 }
 
 footer div {
-    float: right;
+    /* float: right; */
     text-align: right;
     line-height: 1.5;
 }
