--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -59,7 +59,7 @@ header nav ul{
 }
 
 header nav ul li a{
-  margin: 0 30px;
+  padding: 10px 15px;
   font-weight: lighter;
   font-size: 1.55vw;
 }
@@ -82,6 +82,7 @@ section {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start
 }
 
 .hero-cta{
@@ -90,7 +91,7 @@ section {
   margin: 3.5%;
   color: #fff;
   font-size: 18px;
-  line-height: 1.3;
+  line-height: 1.2;
 }
 
 .hero-cta h2 {
@@ -153,7 +154,7 @@ section {
 } */
 
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     /* margin-bottom: 35px; */
     /* padding: 0 100px 20px 100px; */
@@ -437,3 +438,7 @@ footer a {
 
 
 /* FOOTERS STYLES ENDS */
+
+@media screen and (max-width: 980px) {
+    
+}
