--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,46 +1,45 @@
 * {
-    margin: 0;
-    padding: 0;
-    /* box-sizing: border-box; will instruct the browser to ignore padding in the overall width */
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  /* box-sizing: border-box; will instruct the browser to ignore padding in the overall width */
+  box-sizing: border-box;
 }
 
 body {
-    font-family: Helvetica, Arial, sans-serif;
-    color: #39a6b2;
+  font-family: Helvetica, Arial, sans-serif;
+  color: #39a6b2;
 }
-.flex-row{
+.flex-row {
   display: flex;
 }
-
 
 /* apply styles to <header> */
 
 header {
-    padding: 20px 35px;
-    background-color: #39a6b2;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+  padding: 20px 35px;
+  background-color: #39a6b2;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 header h1 {
-    font-weight: bold;
-    font-size: 36px;
-    color: #fce138;
-    margin: 0;
+  font-weight: bold;
+  font-size: 36px;
+  color: #fce138;
+  margin: 0;
 }
 
 header a {
-    color: #fce138;
-    text-decoration: none;
-    /* te xt-decoration: none;  to disable underlines on the "a" tag */
+  color: #fce138;
+  text-decoration: none;
+  /* te xt-decoration: none;  to disable underlines on the "a" tag */
 }
 
 header nav {
-    /* float moves to elements right left */
-    /* float: right; */
-    margin: 7px 0;
+  /* float moves to elements right left */
+  /* float: right; */
+  margin: 7px 0;
 }
 
 /* header nav ul li {
@@ -50,7 +49,7 @@ header nav {
     font-size: 22px;
 } */
 
-header nav ul{
+header nav ul {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -58,7 +57,7 @@ header nav ul{
   list-style: none;
 }
 
-header nav ul li a{
+header nav ul li a {
   padding: 10px 15px;
   font-weight: lighter;
   font-size: 1.55vw;
@@ -67,25 +66,24 @@ header nav ul li a{
 /* HEADER SECTION ENDS */
 
 section {
-    padding: 60px;
+  padding: 60px;
 }
-
 
 /* HERO STYLES STARTS */
 
 .hero-image {
-    background-image: url("../images/hero-bg.jpeg");
-    /* height: 600px; */
-    background-size: cover;
-    background-position: center;
-    /* position: relative; */
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: flex-start
+  background-image: url("../images/hero-bg.jpeg");
+  /* height: 600px; */
+  background-size: cover;
+  background-position: center;
+  /* position: relative; */
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: flex-start;
 }
 
-.hero-cta{
+.hero-cta {
   width: 35%;
   text-align: right;
   margin: 3.5%;
@@ -95,57 +93,55 @@ section {
 }
 
 .hero-cta h2 {
-    font-style: italic;
-    font-size: 55px;
-    color: #fce138;
-  }
+  font-style: italic;
+  font-size: 55px;
+  color: #fce138;
+}
 
 .hero-form {
-    color: #024e76;
-    background-color: #fce138;
-    /* width: 500px; */
-    width: 40%;
-    margin: 3.5%;
-    padding: 20px;
-    border: 3px solid #024e76;
-    /* position: absolute;
+  color: #024e76;
+  background-color: #fce138;
+  /* width: 500px; */
+  width: 40%;
+  margin: 3.5%;
+  padding: 20px;
+  border: 3px solid #024e76;
+  /* position: absolute;
     bottom: 120px;
     right: 140px; */
 }
 
 .hero-form h3 {
-    font-size: 24px;
-    margin: 0;
+  font-size: 24px;
+  margin: 0;
 }
 
 .hero-form p {
-    margin: 5px 0 15px 0;
+  margin: 5px 0 15px 0;
 }
 
 .form-input {
-    font-size: 16px;
-    border: 1px solid #024e76;
-    display: block;
-    padding: 7px 15px;
-    width: 100%;
-    margin-bottom: 15px;
+  font-size: 16px;
+  border: 1px solid #024e76;
+  display: block;
+  padding: 7px 15px;
+  width: 100%;
+  margin-bottom: 15px;
 }
 
 .hero-form label {
-    margin: 0 5px;
+  margin: 0 5px;
 }
 
 .hero-form button {
-    background-color: #024e76;
-    color: #fce138;
-    padding: 10px 20px;
-    border: none;
-    font-size: 16px;
+  background-color: #024e76;
+  color: #fce138;
+  padding: 10px 20px;
+  border: none;
+  font-size: 16px;
 }
 
-
 /* HERO STYLES ENDS */
-
 
 /* Intro STYLES STARTS */
 
@@ -154,46 +150,44 @@ section {
 } */
 
 .section-title {
-    font-size: 48px;
-    color: #024e76;
-    /* margin-bottom: 35px; */
-    /* padding: 0 100px 20px 100px; */
-    border-bottom: 3px solid;
-    padding-bottom: 20px;
-    text-align: center;
-    margin: 0 auto 35px auto;
-    width: 50%;
-    /* display: inline-block; */
+  font-size: 48px;
+  color: #024e76;
+  /* margin-bottom: 35px; */
+  /* padding: 0 100px 20px 100px; */
+  border-bottom: 3px solid;
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
+  /* display: inline-block; */
 }
 
 .primary-border {
-    border-color: #fce138;
+  border-color: #fce138;
 }
 
 .secondary-border {
-    border-color: #39a6b2;
+  border-color: #39a6b2;
 }
 
 .intro p {
-    line-height: 1.7;
-    color: #39a6b2;
-    width: 80%;
-    font-size: 20px;
-    display: inline-block;
-    text-align: center;
-    margin: 0 auto;
+  line-height: 1.7;
+  color: #39a6b2;
+  width: 80%;
+  font-size: 20px;
+  display: inline-block;
+  text-align: center;
+  margin: 0 auto;
 }
 
-
 /* INTRO STYLES ENDS */
-
 
 /* STEPS STYLES STARTS */
 
 .steps {
-    /* text-align: center; */
-    background-color: #fce138;
-    /* line-height: 1.7; */
+  /* text-align: center; */
+  background-color: #fce138;
+  /* line-height: 1.7; */
 }
 
 /* .steps div {
@@ -217,12 +211,12 @@ section {
 }
 
 .step h3 {
-    color: #024e76;
-    font-size: 46px;
-    /* margin-top: 10px; */
-    flex: 1 30%;
+  color: #024e76;
+  font-size: 46px;
+  /* margin-top: 10px; */
+  flex: 1 30%;
 }
-.step-info{
+.step-info {
   flex: 2 70%;
   display: flex;
   flex-wrap: wrap;
@@ -239,10 +233,10 @@ section {
   flex: 12;
 }
 .step-text p {
-    color: #39a6b2;
-    font-size: 18px;
+  color: #39a6b2;
+  font-size: 18px;
 }
-.step-text h4{
+.step-text h4 {
   font-size: 26px;
   line-height: 1.5;
   color: #024e76;
@@ -252,33 +246,31 @@ section {
     font-size: 38px;
 } */
 
-
 /* STEPS STYLES ENDS */
-
 
 /* TRAINERS STYLES STARTS */
 
 .trainers {
-    /* text-align: center; */
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+  /* text-align: center; */
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .trainer {
-    /* width: 900px; */
-    margin: 20px;
-    flex: 1;
-    background: #024e76;
-    color: #fce138;
-    /* overflow: auto; */
+  /* width: 900px; */
+  margin: 20px;
+  flex: 1;
+  background: #024e76;
+  color: #fce138;
+  /* overflow: auto; */
 }
 
 .trainer img {
-    width: 100%;
-    /* float: left; */
+  width: 100%;
+  /* float: left; */
 }
 
 /* .trainer-2 img {
@@ -287,26 +279,25 @@ section {
 } */
 
 .trainer-bio {
-    padding: 25px;
-    /* float: left;
+  padding: 25px;
+  /* float: left;
     width: 65%; */
-    line-height: 1.3;
+  line-height: 1.3;
 }
 
 .trainer-bio h3 {
-    font-size: 28px;
-    /* margin-bottom: 8px; */
+  font-size: 28px;
+  /* margin-bottom: 8px; */
 }
 
 .trainer-bio h4 {
-    font-weight: lighter;
-    font-size: 22px;
-    margin-bottom: 15px;
+  font-weight: lighter;
+  font-size: 22px;
+  margin-bottom: 15px;
 }
 
 .trainer-bio p {
-    font-size: 17px;
-    
+  font-size: 17px;
 }
 
 /* .trainer p {
@@ -321,155 +312,221 @@ section {
     text-align: right;
 } */
 
-
 /* TRAINERS STYLES ENDS */
-
 
 /* CONTACT STYLE STARTS */
 
 .contact {
-    background-color: #024e76;
-    /* text-align: center; */
+  background-color: #024e76;
+  /* text-align: center; */
 }
 
 .contact h2 {
-    color: #fce138;
-    border-bottom: #39a6b2 3px solid;
-    font-size: 55px;
-    margin: 0 100px 20px 100px;
-    width: 30%;
-    display: inline-block;
+  color: #fce138;
+  border-bottom: #39a6b2 3px solid;
+  font-size: 55px;
+  margin: 0 100px 20px 100px;
+  width: 30%;
+  display: inline-block;
 }
 
-.contact-info{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+.contact-info {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-.contact-info> *{
-    flex: 1;
-    margin: 15px;
+.contact-info > * {
+  flex: 1;
+  margin: 15px;
 }
 
 .contact-info iframe {
-    /* width: 400px; */
-    height: 400px;
+  /* width: 400px; */
+  height: 400px;
 }
 
 .contact-info div {
-    /* width: 410px;
+  /* width: 410px;
     display: inline-block;
     vertical-align: top;
     text-align: left;
     margin: 30px 0 0 60px; */
-    color: white;
+  color: white;
 }
 
 .contact-info h3 {
-    color: #fce138;
-    font-size: 32px;
+  color: #fce138;
+  font-size: 32px;
 }
 
 .contact-info p,
 .contact-info address {
-    margin: 20px 0;
-    line-height: 1.5;
-    font-size: 16px;
-    font-style: normal;
+  margin: 20px 0;
+  line-height: 1.5;
+  font-size: 16px;
+  font-style: normal;
 }
 
-.contact-form input, .contact-form textarea{
-    border: 1px solid #024e76;
-    display: block;
-    padding: 7px 15px;
-    font-size: 16px;
-    color: #024e76;
-    width: 100%;
-    margin-bottom: 15px;
-    margin-top: 5px;
+.contact-form input,
+.contact-form textarea {
+  border: 1px solid #024e76;
+  display: block;
+  padding: 7px 15px;
+  font-size: 16px;
+  color: #024e76;
+  width: 100%;
+  margin-bottom: 15px;
+  margin-top: 5px;
 }
-.contact-form button{
-    width: 100%;
-    border: none;
-    background: #fce138;
-    color: #024e76;
-    text-align: center;
-    padding: 15px 0;
-    font-size: 16px;
+.contact-form button {
+  width: 100%;
+  border: none;
+  background: #fce138;
+  color: #024e76;
+  text-align: center;
+  padding: 15px 0;
+  font-size: 16px;
 }
 
 .contact-info a {
-    color: #fce138;
+  color: #fce138;
 }
 
-
 /* CONTACT STYLES ENDS */
-
 
 /* FOOTER STYLES STARTS */
 
 footer {
-    background-color: #fce138;
-    width: 100%;
-    padding: 40px 35px;
-    display: flex;
-    justify-content:space-between;
-    flex-wrap:wrap;
+  background-color: #fce138;
+  width: 100%;
+  padding: 40px 35px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 footer h2 {
-    /* display: inline; */
+  /* display: inline; */
 
-    color: #024e76;
-    font-size: 30px;
-    margin: 0;
+  color: #024e76;
+  font-size: 30px;
+  margin: 0;
 }
 
 footer div {
-    /* float: right; */
-    text-align: right;
-    line-height: 1.5;
+  /* float: right; */
+  text-align: right;
+  line-height: 1.5;
 }
 
 footer a {
-    color: #024e76;
+  color: #024e76;
 }
-
 
 /* FOOTERS STYLES ENDS */
 
 @media screen and (max-width: 980px) {
-    header {
-        padding-bottom: 0;
-        justify-content: center;
-      }
-    
-      header h1 {
-        width: 100%;
-        text-align: center;
-      }
-    
-      header nav ul {
-        margin-top: 20px;
-        width: 100%;
-        justify-content: center;
-      }
-    
-      header nav ul li a {
-        font-size: 20px;
-      }
-    
-      footer h2, footer div {
-        text-align: center;
-        width: 100%;
-      }
+  header {
+    padding-bottom: 0;
+    justify-content: center;
+  }
+
+  header h1 {
+    width: 100%;
+    text-align: center;
+  }
+
+  header nav ul {
+    margin-top: 20px;
+    width: 100%;
+    justify-content: center;
+  }
+
+  header nav ul li a {
+    font-size: 20px;
+  }
+
+  footer h2,
+  footer div {
+    text-align: center;
+    width: 100%;
+  }
+
+  .hero-cta,
+  .hero-form {
+    width: 100%;
+  }
+
+  .hero-cta {
+    text-align: center;
+  }
+
+  .section-title {
+    width: 80%;
+  }
+
+  .trainer {
+    flex: 0 70%;
+  }
+
+  .contact-info iframe {
+    flex: 1 100%;
+  }
 }
 
 @media screen and (max-width: 768px) {
-    
+  section {
+    padding: 30px 15px;
+  }
+  .step h3 {
+    flex: 1 100%;
+    text-align: center;
+  }
+
+  .step-info {
+    flex: 2 100%;
+    text-align: center;
+    justify-content: center;
+  }
+
+  .step-img {
+    flex: 0 32%;
+    margin-right: 0;
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+
+  .step-text {
+    flex: 100%;
+  }
 }
 
 @media screen and (max-width: 575px) {
+    .hero-form button {
+        width: 100%;
+      }
     
+      .section-title {
+        width: 95%;
+      }
+    
+      .intro p {
+        width: 100%;
+      }
+    
+      .trainer {
+        flex: 0 100%;
+      }
+    
+      .contact-info {
+        text-align: center;
+      }
+    
+      .contact-info > * {
+        flex: 0 100%;
+      }
+      .contact-form {
+        order: 3;
+      }
 }
