--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -5,19 +5,26 @@
   box-sizing: border-box;
 }
 
-body {
-  font-family: Helvetica, Arial, sans-serif;
-  color: #39a6b2;
-}
 .flex-row {
   display: flex;
+}
+
+:root {
+  --primary-color: #fce138;
+  --secondary-color: #024e76;
+  --tertiary-color: #39a6b2;
+}
+
+body {
+  font-family: Helvetica, Arial, sans-serif;
+  color: var(--tertiary-color);
 }
 
 /* apply styles to <header> */
 
 header {
   padding: 20px 35px;
-  background-color: #39a6b2;
+  background-color: var(--tertiary-color);
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -29,18 +36,19 @@ header {
   background-position: center;
   background-attachment: fixed;
   background-position: 80%;
+  z-index: 9999;
 }
 
 header h1 {
   font-weight: bold;
   font-size: 36px;
-  color: #fce138;
+  color: var(--primary-color);
   margin: 0;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 header a {
-  color: #fce138;
+  color: var(--primary-color);
   text-decoration: none;
   /* te xt-decoration: none;  to disable underlines on the "a" tag */
 }
@@ -73,8 +81,8 @@ header nav ul li a {
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 header nav ul li a:hover {
-  background: #fce138;
-  color: #024e76;
+  background: var(--primary-color);
+  color: var(--secondary-color);
   border-radius: 15px;
   text-shadow: none;
 }
@@ -113,18 +121,18 @@ section {
 .hero-cta h2 {
   font-style: italic;
   font-size: 55px;
-  color: #fce138;
+  color: var(--primary-color);
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-form {
-  color: #024e76;
+  color: var(--secondary-color);
   background-color: rgba(252, 225, 56, 0.8);
   /* width: 500px; */
   width: 40%;
   margin: 3.5%;
   padding: 20px;
-  border: 3px solid #024e76;
+  border: 3px solid var(--secondary-color);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   /* position: absolute;
     bottom: 120px;
@@ -143,7 +151,7 @@ section {
 
 .form-input {
   font-size: 16px;
-  border: 1px solid #024e76;
+  border: 1px solid var(--secondary-color);
   display: block;
   padding: 7px 15px;
   width: 100%;
@@ -155,14 +163,69 @@ section {
   background-color: rgba(255,255,255, 1);
   outline: none;
 }
+.checkbox-wrapper input, .radio-wrapper input {
+  opacity: 0;
+}
+.checkbox-wrapper label, .radio-wrapper label {
+  position: relative;
+  left: 10px;
+  margin: 10px;
+  line-height: 1.6;
+}
+.checkbox-wrapper label::before, .radio-wrapper label::before {
+  content: "";
+  height: 20px;
+  width: 20px;
+  background: rgba(255, 255, 255, 0.75);  
+  border: 1px solid var(--secondary-color);  
+  position: absolute;
+  top: -4px;
+  left: -30px;
+}
+.radio-wrapper label::before {
+  border-radius: 50%;
+}
+.radio-wrapper label::after {
+  content: "";
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: var(--secondary-color);
+  position: absolute;
+  left: -29px;
+  top: -3px;
+  background-image: radial-gradient(circle, #39a6b2, #024e76);
+}
+
+.checkbox-wrapper label::after {
+  content: "";
+  height: 6px;
+  width: 14px;
+  border-left: 2px solid var(--secondary-color);
+  border-bottom: 2px solid var(--secondary-color);
+  position: absolute;
+  left: -26px;
+  top: 1px;
+  transform: rotate(-58deg);
+}
+/* This is for keep empty  */
+.checkbox-wrapper input + label::after, 
+.radio-wrapper input + label::after {
+  content: none;
+}
+
+.checkbox-wrapper input:checked + label::after, 
+.radio-wrapper input:checked + label::after {
+  content: "";
+}
 
 .hero-form label {
   margin: 0 5px;
 }
 
 .hero-form button {
-  background-color: #024e76;
-  color: #fce138;
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
   padding: 10px 20px;
   border: none;
   font-size: 16px;
@@ -170,7 +233,7 @@ section {
 }
 
 .hero-form button:hover {
-  background-color: #39a6b2;  
+  background-color: var(--tertiary-color);  
 }
 
 /* HERO STYLES ENDS */
@@ -183,7 +246,7 @@ section {
 
 .section-title {
   font-size: 48px;
-  color: #024e76;
+  color: var(--secondary-color);
   /* margin-bottom: 35px; */
   /* padding: 0 100px 20px 100px; */
   border-bottom: 3px solid;
@@ -195,16 +258,16 @@ section {
 }
 
 .primary-border {
-  border-color: #fce138;
+  border-color: var(--primary-color);
 }
 
 .secondary-border {
-  border-color: #39a6b2;
+  border-color: var(--tertiary-color);
 }
 
 .intro p {
   line-height: 1.7;
-  color: #39a6b2;
+  color: var(--tertiary-color);
   width: 80%;
   font-size: 20px;
   display: inline-block;
@@ -218,7 +281,7 @@ section {
 
 .steps {
   /* text-align: center; */
-  background-color: #fce138;
+  background-color: var(--primary-color);
   /* line-height: 1.7; */
 }
 
@@ -235,7 +298,7 @@ section {
   margin: 50px auto;
   padding-bottom: 50px;
   width: 80%;
-  border-bottom: 1px solid #39a6b2;
+  border-bottom: 1px solid var(--tertiary-color);
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -249,7 +312,7 @@ section {
 } */
 
 .step h3 {
-  color: #024e76;
+  color: var(--secondary-color);
   font-size: 46px;
   /* margin-top: 10px; */
   flex: 1 30%;
@@ -271,13 +334,13 @@ section {
   flex: 12;
 }
 .step-text p {
-  color: #39a6b2;
+  color: var(--tertiary-color);
   font-size: 18px;
 }
 .step-text h4 {
   font-size: 26px;
   line-height: 1.5;
-  color: #024e76;
+  color: var(--secondary-color);
 }
 
 /* .steps span {
@@ -301,8 +364,8 @@ section {
   /* width: 900px; */
   margin: 20px;
   flex: 1;
-  background: #024e76;
-  color: #fce138;
+  background: var(--secondary-color);
+  color: var(--primary-color);
   /* overflow: auto; */
 }
 
@@ -355,13 +418,13 @@ section {
 /* CONTACT STYLE STARTS */
 
 .contact {
-  background-color: #024e76;
+  background-color: var(--secondary-color);
   /* text-align: center; */
 }
 
 .contact h2 {
-  color: #fce138;
-  border-bottom: #39a6b2 3px solid;
+  color: var(--primary-color);
+  border-bottom: var(--tertiary-color) 3px solid;
   font-size: 55px;
   margin: 0 100px 20px 100px;
   width: 30%;
@@ -395,7 +458,7 @@ section {
 }
 
 .contact-info h3 {
-  color: #fce138;
+  color: var(--primary-color);
   font-size: 32px;
 }
 
@@ -409,11 +472,11 @@ section {
 
 .contact-form input,
 .contact-form textarea {
-  border: 1px solid #024e76;
+  border: 1px solid var(--secondary-color);
   display: block;
   padding: 7px 15px;
   font-size: 16px;
-  color: #024e76;
+  color: var(--secondary-color);
   width: 100%;
   margin-bottom: 15px;
   margin-top: 5px;
@@ -428,7 +491,7 @@ section {
 .contact-form button {
   width: 100%;
   border: none;
-  background: #fce138;
+  background: var(--primary-color);
   color: #024e76;
   text-align: center;
   padding: 15px 0;
@@ -436,12 +499,12 @@ section {
   border-radius: 10px;
 }
 .contact-form button:hover {
-  color: #fce138;
-  background: #39a6b2;
+  color: var(--primary-color);
+  background: var(--tertiary-color);
 }
 
 .contact-info a {
-  color: #fce138;
+  color: var(--primary-color);
 }
 
 /* CONTACT STYLES ENDS */
@@ -449,7 +512,7 @@ section {
 /* FOOTER STYLES STARTS */
 
 footer {
-  background-color: #fce138;
+  background-color: var(--primary-color);
   width: 100%;
   padding: 40px 35px;
   display: flex;
@@ -460,7 +523,7 @@ footer {
 footer h2 {
   /* display: inline; */
 
-  color: #024e76;
+  color: var(--secondary-color);
   font-size: 30px;
   margin: 0;
 }
@@ -472,7 +535,7 @@ footer div {
 }
 
 footer a {
-  color: #024e76;
+  color: var(--secondary-color);
 }
 
 /* FOOTERS STYLES ENDS */
